version 1.2.4 update httpclient (#53)
* version 1.2.4 update httpclient

* add test